scrollbar fixes, make numeric color dark blue

--- a/css/app.css
+++ b/css/app.css
@@ -7,11 +7,14 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
     font-family: 'Arial', 'Helvetica', sans-srif;
 }
 
 #canvas {
     background: #0a0e3e;
+    width: 100%;
+    height: 100%;
 }
 
 .landing {
@@ -36,7 +39,7 @@ html, body {
 }
 
 .timer-block .numeric {
-    color: rgba(255, 255, 255, 0.15);
+    color: rgba(16, 19, 65, 1);
     height: 70px;
     line-height: 70px;
     font-size: 50px;
